// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreditCardForm /> should match its snapshot with custom props 1`] = `
Array [
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-Field__label k-u-margin-bottom-single"
    >
      <div
        className="sc-eCImPb dZlDpq k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-gsDKAQ gDfswp k-Label k-Label--small"
            htmlFor="frmCCNum"
            onClick={[Function]}
          >
            Numéro de carte
          </label>
        </div>
      </div>
    </div>
    <div
      className="sc-jRQBWg cdbdbv k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control sc-bdvvtL fUNvYp k-u-margin-top-single"
    >
      <input
        autoComplete="cc-number"
        className="k-TextInput"
        defaultValue=""
        disabled={false}
        id="frmCCNum"
        inputMode="numeric"
        name="cardnumber"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="#### #### #### #######"
        type="text"
      />
    </div>
  </div>,
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-Field__label k-u-margin-bottom-single"
    >
      <div
        className="sc-eCImPb dZlDpq k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-gsDKAQ gDfswp k-Label k-Label--small"
            htmlFor="frmCCExp"
            onClick={[Function]}
          >
            Date de validité
          </label>
        </div>
      </div>
    </div>
    <div
      className="sc-jRQBWg cdbdbv k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single k-TextInput__wrapper--hasDigits"
    >
      <input
        autoComplete="cc-exp"
        className="k-TextInput k-TextInput-hasDigits k-TextInput-hasDigits_6"
        defaultValue=""
        disabled={false}
        id="frmCCExp"
        inputMode="numeric"
        name="cc-exp"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="MM/AA"
        style={
          Object {
            "--input-content-width": 6,
          }
        }
        type="text"
      />
    </div>
  </div>,
  <div
    className="k-u-margin-bottom-triple"
  >
    <div
      className="k-Field__label k-u-margin-bottom-single"
    >
      <div
        className="sc-eCImPb dZlDpq k-Line"
        style={
          Object {
            "lineHeight": 1,
          }
        }
      >
        <div
          className="k-Line__item"
        >
          <label
            className="sc-gsDKAQ gDfswp k-Label k-Label--small"
            htmlFor="frmCCCVC"
            onClick={[Function]}
          >
            Cryptogramme visuel
          </label>
        </div>
      </div>
    </div>
    <div
      className="sc-jRQBWg cdbdbv k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single k-TextInput__wrapper--hasDigits"
    >
      <input
        autoComplete="cc-csc"
        className="k-TextInput k-TextInput-hasDigits k-TextInput-hasDigits_6"
        defaultValue=""
        disabled={false}
        id="frmCCCVC"
        inputMode="numeric"
        name="cvc"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseUp={[Function]}
        placeholder="###"
        style={
          Object {
            "--input-content-width": 6,
          }
        }
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`<CreditCardForm /> should match its snapshot with default props 1`] = `
Array [
  <div>
    <label
      htmlFor="frmCCNum"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-number"
      className="sc-bdvvtL fUNvYp"
      id="frmCCNum"
      inputMode="numeric"
      name="cardnumber"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="#### #### #### #######"
      type="text"
      value=""
    />
  </div>,
  <div>
    <label
      htmlFor="frmCCExp"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-exp"
      id="frmCCExp"
      inputMode="numeric"
      name="cc-exp"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="MM/YY"
      type="text"
      value=""
    />
  </div>,
  <div>
    <label
      htmlFor="frmCCCVC"
    >
      Card Number
    </label>
    <input
      autoComplete="cc-csc"
      id="frmCCCVC"
      inputMode="numeric"
      name="cvc"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="###"
      type="text"
      value=""
    />
  </div>,
]
`;
